src/np222kk/dv507/a2/test/cases/negative/test_initialization.ofp
void main() {
    int i;

    if (i > 1) {
        int b = i;
    }
}